--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                                 <a href="New-vote.html" class="nav-link">New Vote</a>
                             </li>
                             <li class="nav-item">
-                                <a href="" class="nav-link">Sign up</a>
+                                <a href="sign-up.html" class="nav-link">Sign up</a>
                             </li>
                             <li class="nav-item">
-                                <a href="" class="nav-link">Sign in</a>
+                                <a href="log_in.html" class="nav-link">Sign in</a>
                             </li>
                         </ul>
                     </div>
