--- a/sign-up.html
+++ b/sign-up.html
@@ -2,19 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-
+    <title>log-in</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style/newvote.css">
+    <link rel="stylesheet" href="../jack_simon-sign-in-out/style/log-in.css">
+    <link rel="stylesheet" href="../jack_simon-sign-in-out/style/index.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="script/index.js"></script>
-
 </head>
 <body>
 <div class="container-fluid">
-    <div class="container-fluid" >
+    <div class="  col-xs-12  ">
+
         <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top id=all_container padding">
             <div class="container-fluid" >
                 <a class="navbar-brand" href="index.html">Vote and Rank</a>
@@ -31,29 +30,31 @@
             </div>
         </nav>
 
-        <div class="container-fluid">
-            <div class="content-part">
-                <div class="create-title-part">
-                    <form action="">
-                        <input type="text" class="create-title" placeholder="Enter the title">
-                    </form>
-                </div>
-                <div class="create-description-part">
-                    <form action="">
-                        <input type="text" class="create-description" placeholder="Enter the description">
-                    </form>
-                </div>
-                <hr>
-                <div class="crate-submit-part">
-                    <form action="index.html">
-                        <input type="submit" value="submit" class="btn btn-primary" id="submit" onclick="addNewVote()">
-                    </form>
-                </div>
+        <div class="main-part">
+            <!--log in part -->
+            <div id="log-in" class="col-xs-12 ">
+                <form action="/" method="post" >
+                    <div class="border p-4">
+                        <div class="md-form form-group w-50" style="margin-left: 25%">
+                            <input type="text" class="form-control" id="out-username" placeholder="User name ">
+                        </div>
+                        <div class="md-form form-group w-50" style="margin-left: 25%">
+                            <input type="text" class="form-control" id="out-account" placeholder="e-mail ">
+                        </div>
+
+                        <div class="md-form form-group w-50" style="margin-left: 25%">
+                            <input type="password" class="form-control" id="out-password" placeholder="your password">
+                        </div>
+
+                    </div>
+
+                    <button type="submit" class="btn btn-primary" style="margin-left: 47%">sign up</button>
+                    <br>
+                    <a href="log_in.html" style="margin-left: 44%">already have one? log in now</a>
+                </form>
             </div>
         </div>
-
     </div>
 </div>
-
 </body>
 </html>
